--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fullpage/react-fullpage": "^0.1.14",
     "node-sass": "^4.12.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-fullpage": "^0.1.19",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^3.0.0",
     "react-transition-group": "^4.0.0"
