--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@fullpage/react-fullpage": "^0.1.14",
     "node-sass": "^4.12.0",
     "react": "^16.8.4",
+    "react-animated-css": "^1.0.5",
     "react-dom": "^16.8.4",
     "react-fullpage": "^0.1.19",
     "react-router-dom": "^5.0.0",
