--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@fullpage/react-fullpage": "^0.1.14",
     "node-sass": "^4.12.0",
+    "parallax-js": "^3.1.0",
     "react": "^16.8.4",
     "react-animated-css": "^1.0.5",
     "react-dom": "^16.8.4",
