--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.0.1",
+    "react-sidebar": "^3.0.2",
     "react-transition-group": "^4.2.1",
     "react-wow": "^1.0.0",
     "redux": "^4.0.4",
