--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-animated-css": "^1.2.1",
     "react-dom": "^16.8.6",
     "react-fullpage": "^0.1.19",
+    "react-image-palette": "^0.2.4",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.0.1",
